[package]
name = "tag-values-cache"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "scratch"
path = "src/bin/scratch.rs"

[dependencies]
arrow = { version = "55.2" }
datafusion = "49.0.0"
indexmap = "2.7"
interavl = { path = "./interavl" }
intervaltree = "0.2.7"
num-traits = "0.2"
parquet = { version = "55.2", features = ["arrow"] }
rayon = "1.10"
roaring = "0.10"
rust-lapper = "1.2.0"
thiserror = "2.0.17"
arrow_util = { path = "../influxdb_iox/arrow_util" }
futures = { version = "0.3" }
tokio = { version = "1.42", features = ["macros", "rt"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
chrono = "0.4"
rand = "0.9.2"
parquet = "55.2"
arrow = "55.2"

[[bench]]
name = "value_lapper_cache"
harness = false

[[bench]]
name = "streaming_build"
harness = false

[[bench]]
name = "bitmap_comparison"
harness = false
