[package]
name = "tag-values-cache"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "scratch"
path = "src/bin/scratch.rs"

[[bin]]
name = "generate_cardinality_data"
path = "src/bin/generate_cardinality_data.rs"


[[bin]]
name = "generate_cardinality_data_streaming"
path = "src/bin/generate_cardinality_data_streaming.rs"

[[bin]]
name = "generate_cardinality_data_sequential"
path = "src/bin/generate_cardinality_data_sequential.rs"

[[bin]]
name = "generate_cardinality_data_bounded"
path = "src/bin/generate_cardinality_data_bounded.rs"

[[bin]]
name = "generate_cardinality_data_mpmc"
path = "src/bin/generate_cardinality_data_mpmc.rs"

[dependencies]
arrow = { version = "55.2" }
crossbeam-channel = "0.5"
datafusion = "49.0.0"
indexmap = "2.7"
interavl = { path = "./interavl" }
intervaltree = "0.2.7"
num-traits = "0.2"
parquet = { version = "55.2", features = ["arrow"] }
rayon = "1.10"
roaring = "0.10"
rust-lapper = "1.2.0"
thiserror = "2.0.17"
arrow_util = { path = "../influxdb_iox/arrow_util" }
futures = { version = "0.3" }
tokio = { version = "1.42", features = ["macros", "rt"] }
ahash = "0.8.12"
smallvec = "1.15.1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
chrono = "0.4"
rand = "0.9.2"
parquet = "55.2"
arrow = "55.2"

[[bench]]
name = "value_lapper_cache"
harness = false

[[bench]]
name = "streaming_build"
harness = false

[[bench]]
name = "bitmap_comparison"
harness = false

[[bench]]
name = "bitmap_comparison_streaming"
harness = false

[[bench]]
name = "tag_values_cache"
harness = false
